--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -3,7 +3,7 @@
 @plugin "./daisyui.js";
 
 @theme {
-    /* --breakpoint-*: initial; */
+    --breakpoint-*: initial;
     --breakpoint-sm: 480px;
     --breakpoint-md: 768px;
     --breakpoint-lg: 1024px;
@@ -52,7 +52,4 @@
     --font-size-10xl: 10rem;
     --font-size-11xl: 11rem;
     --font-size-12xl: 12rem;
-
-
-    
 }
