signup form + user model simplified + new profile controller + new view & route for Profile + redirection page after signup for profile completion. Test done.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,25 @@
     Si vous voyez cette page, votre application Rails fonctionne correctement!
   </div>
 
+<!-- message to invite new users to complete their profile -->
+<% if user_signed_in? && (current_user.bio.blank? || !current_user.profile_image.attached?) %>
+  <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mb-6">
+    <div class="flex">
+      <div class="flex-shrink-0">
+        <svg class="h-5 w-5 text-yellow-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
+        </svg>
+      </div>
+      <div class="ml-3">
+        <p class="text-sm text-yellow-700">
+          Your profile is incompleted. 
+          <%= link_to "Click here to complete it", edit_profile_path, class: "font-medium underline text-yellow-700 hover:text-yellow-600" %>
+        </p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
  <% if @albums.present? %>
   <h2 class="text-xl font-bold mt-8 mb-4">Albums récents:</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
