--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -1,18 +1,14 @@
-<nav class="bg-gray-800 text-white">
+<nav class="fixed top-0 left-0 right-0 bg-slate-400/10 backdrop-blur-sm text-white z-10 border-b-1 border-slate-400/30">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
-        <%= link_to "NFT Music Platform", root_path, class: "text-xl font-bold" %>
-        <div class="ml-10 flex items-baseline space-x-4">
-          <%= link_to "Albums", albums_path, class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
-          <%= link_to "Genres", genres_path, class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
-        </div>
+        <%= link_to "monotone", root_path, class: "text-xl font-brand text-black" %>
       </div>
       <div>
         <% if user_signed_in %>
           <div class="flex items-center space-x-4">
-            <%= link_to "Create Album", new_album_path, class: "px-3 py-2 bg-indigo-600 rounded-md text-sm font-medium hover:bg-indigo-700" %>
-            <%= link_to "My dashboard", dashboard_user_path(current_user), class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
+            <%= link_to "Drop Album", new_album_path, class: "px-3 py-2 bg-indigo-600 rounded-md text-sm font-medium hover:bg-indigo-700" %>
+            <%= link_to "Dashboard", dashboard_user_path(current_user), class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
             <div class="relative group">
               <button class="flex items-center text-sm font-medium rounded-full focus:outline-none">
                 <% if current_user.profile_image.attached? %>
@@ -33,8 +29,12 @@
           </div>
         <% else %>
           <div class="flex items-center space-x-4">
-            <%= link_to "Connexion", new_user_session_path, class: "px-3 py-2 rounded-md text-sm font-medium hover:bg-gray-700" %>
-            <%= link_to "Inscription", new_user_registration_path, class: "px-3 py-2 bg-indigo-600 rounded-md text-sm font-medium hover:bg-indigo-700" %>
+            <%= link_to "sign in", new_user_session_path, class: "font-base text-lg font-medium text-slate-600" %>
+            <%= link_to "sign up", new_user_registration_path, class: "font-base text-lg font-medium text-slate-600" %>
+            <div class="border-l border-gray-500/30 h-6"></div>
+            <a href="https://github.com/bIRDwAntS/solana_nft_music" target="_blank" rel="noopener noreferrer" class="w-6 h-6 text-slate-600">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="w-full h-full"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
+            </a>
           </div>
         <% end %>
       </div>
