--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,12 @@
 <div class="container mx-auto px-4 py-8">
-  <h1 class="text-3xl font-bold mb-6 text-slate-600">SolanaMusicNFT</h1>
+  <h1 class="font-brand text-h1 mb-6 text-black">Monotone</h1>
   
-  <p class="mb-6 text-slate-600">Plateforme de musique NFT sur Solana</p>
+  <div class="flex-col gap-5">
+    <p class="font-title text-base mb-6 text-slate-600">Human-made music for humans</p>
+     <p class="font-base text-p mb-6 text-black">Plateforme de musique NFT sur Solana</p>
+      <p class="font-alt-title text-h2 mb-6 text-slate-600">Plateforme de musique NFT sur Solana</p>
+       <p class="font-alt-base text-h3 mb-6 text-slate-600">Plateforme de musique NFT sur Solana</p>
+  </div>
   
   <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded">
     Si vous voyez cette page, votre application Rails fonctionne correctement!
