--- a/app/assets/themes/colors.css
+++ b/app/assets/themes/colors.css
@@ -1,3 +1,7 @@
 @theme {
-     --color-main: #a55ba9;
+     --color-main: #314158;
+     --color-mint: #b2ffff;
+     --color-mouse: #F0F0FF;
+     --color-coal:#000434;
+     --color-smoke: #100c08;
 }
