--- a/app/components/navbar_component.html.erb
+++ b/app/components/navbar_component.html.erb
@@ -1,8 +1,9 @@
+<!-- -->
 <nav class="fixed top-0 left-0 right-0 bg-slate-400/10 backdrop-blur-sm text-white z-10 border-b-1 border-slate-400/30">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+  <div class=" mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
-        <%= link_to "monotone", root_path, class: "text-xl font-brand text-black" %>
+        <%= link_to "monotone", root_path, class: "text-xl font-title tracking-wide text-coal" %>
       </div>
       <div>
         <% if user_signed_in %>
