--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
+    <link rel="icon" type="image/png" sizes="32x32" href="/panda.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/panda.png">
   </head>
 
  <body class="w-full min-h-screen flex flex-col bg-gradient-to-tl from-gray-100 to-gray-300">
