--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SolanaMusicNft</title>
+    <title>Monotone Panda</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,7 +11,6 @@
     <%= javascript_importmap_tags %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
     <link rel="icon" type="image/png" sizes="32x32" href="/panda.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/panda.png">
   </head>
 
  <body class="w-full min-h-screen flex flex-col bg-gradient-to-tl from-gray-100 to-gray-300">
